2002-12-30  Paul Swartz  <z3p@twistedmatrix.com>

	* twisted/conch/*: added docstrings to most conch classes and functions

2002-12-30  Brian Warner  <warner@lothar.com>

	* twisted/spread/pb.py (Broker.connectionLost): clear localObjects
	too, to break a circular reference involving AuthServs that could
	keep the Broker (and any outstanding pb.Referenceables) alive
	forever.

2002-12-29  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/python/compat.py: Single module where all compatability
	code for supporting old Python versions should be placed.

2002-12-28  Glyph Lefkowitz  <glyph@twistedmatrix.com>

	* twisted/web/woven/guard.py: Newer, better wrappers for
	authentication and session management.  In particular a nice
	feature of this new code is automatic negotiation with browsers on
	whether cookies are enabled or not.

2002-12-27  Paul Swartz <z3p@twistedmatrix.com>

	* bin/tkconch: initial commit of tkconch, a SSH client using Tkinter
	as a terminal emulator.  puts up a menu to configure when run without
	arguments.

	* twisted/conch/ui: moved ansi.py and tkvt100.py to t.c.ui so they are
	away from the purely conch stuff.

2002-12-25  Christmas Armstrong  <radix@twistedmatrix.com>

	* .: Releasing 1.0.2alpha1 - Merry Christmas!

2002-12-25  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/protocols/dict.py: dict client protocol implementation
	from Pavel "Pahan" Pergamenshchik (<pp64@cornell.edu>)

2002-12-23  Jp Calderone  <exarkun@twistedmatrix.com>

	* doc/examples/testdns.py and doc/examples/dns-service.py added as
	simple example of how to use new DNS client API.

2002-12-23  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/web/xmlrpc.py:  added XML RPC client support

2002-12-22  Paul Swartz  <z3p@twistedmatrix.com>

	* twisted/conch/ssh/keys.py, twisted/conch/ssh/asn1.py: support for 
	writing	public and private keys.

	* bin/ckeygen: new script to create public/private key pairs

2002-12-22  Jp Calderone  <exarkun@twistedmatrix.com>
